<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.s1g3</groupId>
    <artifactId>CSSE376_S1G3</artifactId>
    <version>1.0-SNAPSHOT</version>
    <build>
        <plugins>
            <plugin>
                <groupId>org.pitest</groupId>
                <artifactId>pitest-maven</artifactId>
                <version>1.19.1</version>
                <configuration>
                    <targetClasses>
                        <param>com.*</param>
                    </targetClasses>
                    <targetTests>
                        <param>com.*Tests</param>
                    </targetTests>
                    <excludedTests>
                        <param>com.GuiTest*</param>
                    </excludedTests>
                    <excludedClasses>
                        <param>com.GuiTest*</param>
                        <param>com.Main</param>
                        <param>com.Gui</param>
                    </excludedClasses>
                    <jvmArgs>
                        <arg>-Djava.awt.headless=false</arg>
                        <arg>--add-opens</arg>
                        <arg>java.base/java.util=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>java.desktop/java.awt=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>java.desktop/java.awt.event=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>java.desktop/javax.swing=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>java.desktop/sun.awt=ALL-UNNAMED</arg>
                    </jvmArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <argLine>
                        --add-opens java.base/java.util=ALL-UNNAMED
                        --add-opens java.desktop/java.awt=ALL-UNNAMED
                        --add-opens java.desktop/java.awt.event=ALL-UNNAMED
                        --add-opens java.desktop/javax.swing=ALL-UNNAMED
                        --add-opens java.desktop/sun.awt=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <properties>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.easymock</groupId>
            <artifactId>easymock</artifactId>
            <version>5.5.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.pitest</groupId>
            <artifactId>pitest-parent</artifactId>
            <version>1.19.1</version>
            <type>pom</type>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-swing-junit</artifactId>
            <version>3.17.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>